@@ -116,16 +116,18 @@
 				</ul>
 			</li>
 			<li>
-				<a href="#freespace">Freespace</a>
-				<ul>
-					<li><a href="#stub">stub</a></li>
-				</ul>
-			</li>
-			<li>
 				<a href="#includes">Includes</a>
 				<ul>
 					<li><a href="#incsrc">incsrc</a></li>
 					<li><a href="#includefrom">include/includefrom</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#freespace">Freespace</a>
+				<ul>
+					<li><a href="#freecode">freespace/freecode/freedata</a></li>
+					<li><a href="#autoclean">autoclean</a></li>
+					<li><a href="#prot">prot</a></li>
 				</ul>
 			</li>
 			<li>
@@ -2406,11 +2408,192 @@ pullpc</code></pre>
 		<a href="#contents">Return to top</a></p>
 		<hr />
         <p id="includes"><h3>Includes</h3>
+		Includes make it possible for your code to reference other files. This can be done for a number of reasons. The most common scenarios are to split code into multiple source files (see <a href="#incsrc">incsrc</a>) or to separate code from data (see <a href="#incbin">incbin</a>). Whenever using a command or function referencing another file, Asar tries to locate that file by applying a set of rules to the file path in a specific order:
+		<ol>
+			<li>
+				If the path is an <b>absolute</b> path:
+				<ol>
+					<li>Asar tries to locate the file directly via the specified path.</li>
+					<li>If this fails, an error is thrown.</li>
+				</ol>
+			</li>
+			<li>
+				If the path is a <b>relative</b> path:
+				<ol>
+					<li>Asar tries to locate the file relatively to the file currently being assembled. (Caution: when used inside macros, paths are relative to the macro definition rather than to the macro call).</li>
+					<li>If this fails, Asar tries to locate the file relatively to any of the include search paths that were specified, in the order they were specified in, until the file is found. (See section <a href="#usage">Usage</a> for details on include search paths).</li>
+					<li>If all of the previous fail, an error is thrown.</li>
+				</ol>
+			</li>
+		</ol>
 		<h4 id="incsrc">incsrc</h4>
+		<pre><code class="65c816_asar">incsrc {filename}</code></pre>
+		The incsrc command makes Asar assemble the file referenced by the <code>filename</code> parameter (enclose in double quotes to use file names with spaces, see section <a href="#includes">Includes</a> for details on Asar's handling of file names). The file is assembled in-place which means that Asar instantly switches to the new file and only returns to the previous file once assembling the new file has finished. All of Asar's state (labels, defines, functions, pc etc.) is shared between files. When including other files, there is a recursion limit of 512 levels. This limit only serves the purpose of preventing infinite recursion. For an easier understanding of incsrc, you can visualize it as a command which pastes the contents of another file directly into the current file (although that's not actually how it's implemented and there are differences in the way relative file paths are handled).
+		<pre><code class="65c816_asar">; Contents of routine.asm:
+;AnotherRoutine:
+;	lda #$FF
+;	sta $00
+;	rts
+
+Main:
+	jsr AnotherRoutine
+	bra Main
+
+incsrc "routine.asm"
+		</code></pre>
 		<h4 id="includefrom">include/includefrom</h4>
+		<pre><code class="65c816_asar">include</code></pre>
+		<pre><code class="65c816_asar">includefrom {filename}</code></pre>
+		The include and includefrom commands specify that a file is only to be included in another file and not to be assembled directly. When a user tries to assemble a file containing include or includefrom directly, an error is thrown. The includefrom command behaves identically to the include command with the exception that it is passed the name of the file it is meant to be included from (note that Asar doesn't verify whether it's actually included from that file, it only checks whether it's included from another file at all). When making use of include or includefrom, they must be the first command within their respective file and can't be used in combination with the <a href="#asar">asar</a> or <a href="#xkas">xkas</a> command in the same file.		
+		<pre><code class="65c816_asar">; Contents of shared.asm:
+;@includefrom main.asm
+;
+;if read1($00FFD5) == $23
+;	!is_sa1_rom = 1
+;else
+;	!is_sa1_rom = 0
+;endif
+
+@asar 1.37
+
+incsrc "shared.asm"
+
+if !is_sa1_rom
+	; ...
+endif</code></pre>
 		<a href="#contents">Return to top</a></p>
 		<hr />
         <p id="freespace"><h3>Freespace</h3>
+		Freespace is a concept that comes into play when extending an existing ROM. To insert new code or data into a ROM, the ROM must contain enough continuous unused space for everything to fit into. Space like that is referred to as freespace. Many tools attempt to find freespace in a ROM by looking for continuous blocks of a certain value (most commonly $00). This method on its own isn't reliable as freespace finders could erroneously detect binary data or code with a certain pattern as freespace. For this reason, the RATS format was invented to protect data inserted into a ROM (see <a href="http://old.smwiki.net/wiki/ROM_Allocation_Tag_System">SMW Wiki</a> for details on the RATS format). When placing RATS tags at the beginning of occupied memory blocks inside a ROM, freespace finders can search for them to know which parts of the ROM not to overwrite. Asar supports a number of commands for working with freespace directly, including freespace finders with automatic RATS tag generation.
+		<h4 id="freecode">freespace/freecode/freedata</h4>
+		<pre><code class="65c816_asar">freespace {ram/noram}[,align][,cleaned][,static][,value]</code></pre>
+		<pre><code class="65c816_asar">freecode</code></pre>
+		<pre><code class="65c816_asar">freedata</code></pre>
+		The freespace command makes Asar search the output ROM for a freespace area large enough to contain the following section of code/data. If such an area is found, the pc is placed at its beginning and a RATS tag automatically written. If no such area is found, an error is thrown. The parameters control what kind of freespace to look for.
+		<br/><br/>
+		<table>
+			<tr>
+				<th style="width:150px">Parameter</th>
+				<th>Details</th>
+			</tr>
+			<tr>
+				<td><code>ram</code></td>
+				<td>The freespace finder searches for an area where RAM mirrors are available (banks $10 to $3F). Recommended when inserting code.</td>
+			</tr>
+			<tr>
+				<td><code>noram</code></td>
+				<td>The freespace finder searches for an area where RAM mirrors aren't available (banks $40 to $6F and $F0 to $FF). If no such area is found, it searches in the remaining banks ($10 to $3F). Recommended when inserting data.</td>
+			</tr>
+			<tr>
+				<td><code>align</code></td>
+				<td>The freespace finder searches for an area at the beginning of a bank.</td>
+			</tr>
+			<tr>
+				<td><code>cleaned</code></td>
+				<td>Suppresses the warning about freespace leaking. Useful when Asar's leak detection misbehaves on an autoclean with a complicated math statement or similar.</td>
+			</tr>
+			<tr>
+				<td><code>static</code></td>
+				<td>Prevents the freespace area from moving once assigned. This also prevents it from growing (an error is thrown if the area would need to grow). Useful in situations where data needs to remain in a certain location (for example: when another tool or another patch needs to access it).</td>
+			</tr>
+			<tr>
+				<td><code>value</code></td>
+				<td>A number literal or math statement specifying the byte value to look for when searching for freespace (default: $00). To find freespace, Asar will look for continuous areas of this value. When using autoclean on this freespace, this is also the value the area will be cleaned to.</td>
+			</tr>
+		</table><br/>
+		The freecode command is an alias of <code>freespace ram</code>, whreas the freedata command is an alias of <code>freespace noram</code>. There are a few things to note when working with freespace in Asar. First of all, if Asar places two freespace areas within the same bank, it will use 24-bit addressing in cases where they reference each other, despite 16-bit addressing being possible in theory. This can be worked around by only using a single freespace area instead. It's not recommended to explicitly use 16-bit addressing in these cases as the two freespace areas are not guaranteed to always end up in the same bank for all users. Secondly, when Asar places two freespace areas close to each other, a few bytes will be wasted between them for technical reasons. In most practical scenarios, the amount of wasted space should be reasonably small (&lt; 1% of the code size), nevertheless this once again can be worked around by only using a single freespace area instead. Lastly, the number of freespace areas a single Asar patch can place is limited to a maximum of 125.
+		<pre><code class="65c816_asar">; Let's assume this to be some location in the ROM originally containing
+;lda #$10
+;sta $1F
+org $01A56B
+	autoclean jsl MyNewCode
+	
+freecode
+
+MyNewCode:
+	; Do something here
+	; ...
+	
+.Return:
+	; We overwrote some code from the original ROM with our org, so we have to restore it here
+	lda #$10
+	sta $1F
+	
+	rtl</code></pre>
+		<h4 id="autoclean">autoclean</h4>
+		<pre><code class="65c816_asar">autoclean jml/jsl/dl {label}</code></pre>
+		<pre><code class="65c816_asar">autoclean {snes_address}</code></pre>
+		The autoclean command makes it possible for Asar to automatically clean up and reuse all of the freespace allocated by a patch when applying that patch again. The purpose of this is to prevent freespace leaks. Normally, applying a patch including a freespace (or similar) command to the same ROM multiple times would allocate a new freespace area each time. Since Asar automatically protects allocated freespace via RATS tags, all freespace areas previously allocated by the same patch would leak and become unusable, making the output ROM run out of freespace eventually. The autoclean command can prevent this by freeing up freespace areas previously allocated by the patch before allocating new ones. How it accomplishes this depends on how it is used:
+		<ul>
+			<li>
+				<b>When used with a <code>jml</code> or <code>jsl</code>:</b><br/>
+				The <code>label</code> parameter must be a label pointing to inside a freespace area. When the patch is applied and the autoclean is encountered, Asar checks whether the output ROM contains a jml/jsl at the current pc. If it does, Asar checks whether the jml/jsl points to the expanded area of the ROM (banks $10+). If it does, Asar checks whether the jml/jsl points to an area protected by a RATS tag (including the RATS tag itself). If it does, Asar cleans up that area and removes the RATS tag.
+			</li>
+			<li>
+				<b>When used with a <code>dl</code>:</b><br/>
+				The <code>label</code> parameter must be a label pointing to inside a freespace area. When the patch is applied and the autoclean is encountered, Asar checks whether the output ROM contains an address pointing to the expanded area of the ROM (banks $10+) at the current pc. If it does, Asar checks whether that address points to an area protected by a RATS tag (including the RATS tag itself). If it does, Asar cleans up that area and removes the RATS tag.
+			</li>
+			<li>
+				<b>When used with just an address:</b><br/>
+				The <code>snes_address</code> parameter must be any label, number literal or math statement resolving to an SNES address pointing to inside a freespace area. When the patch is applied and the autoclean is encountered, Asar checks whether that address points to the expanded area of the ROM (banks $10+). If it does, Asar checks whether it points to an area protected by a RATS tag (including the RATS tag itself). If it does, Asar cleans up that area and removes the RATS tag.
+			</li>
+		</ul>
+		When using autoclean with a jml, jsl or dl, Asar will also assemble the respective line of code at the current pc. For simplicity, you can treat the autoclean command like a modifier in those cases. A few more things to note when using the autoclean command:
+		<ul>
+			<li>The autoclean command itself may not be used inside a freespace area. To automatically clean up freespace that is only referenced within another freespace area, you can use the <a href="#prot">prot</a> command.</li>
+			<li>It is safe to have multiple autoclean commands pointing to the same freespace area.</li>
+			<li>You can not use autoclean with a label pointing to the very end of a freespace area.</li>
+		</ul>		
+		<pre><code class="65c816_asar">; Let's assume this to be some location in the ROM containing a function pointer table or similar
+org $00A5F2
+	autoclean dl MyNewFunction1
+	autoclean dl MyNewFunction2
+	
+freecode
+
+MyNewFunction1:
+	; ...
+	rtl
+	
+MyNewFunction2:
+	; ...
+	rtl</code></pre>
+		<h4 id="prot">prot</h4>		
+		<pre><code class="65c816_asar">prot {label}[,label...]</code></pre>
+		The prot command makes it possible for Asar to automatically clean up a freespace area that is only referenced within another freespace area and thus can't be cleaned via an autoclean directly. It must be used at the beginning of a freespace area (right after the freespace command), where the <code>label</code> parameter must be a label pointing to inside a freespace area (you can pass up to 85 labels separated by commas to a single prot). When a freespace area containing a prot is cleaned by an autoclean, all freespace areas referenced by the prot are also cleaned up.		
+		<pre><code class="65c816_asar">org $0194BC
+	autoclean jsl MyNewFunction
+	
+	
+freecode
+prot SomeLargeData
+
+MyNewFunction:
+	ldx.b #0
+	
+.Loop:
+	{
+		lda SomeLargeData,x
+		cmp #$FF
+		beq .Return
+		
+		; ...
+		
+		inx
+		
+		bra .Loop
+	}
+	
+.Return:
+	rtl
+	
+	
+freedata
+
+SomeLargeData:
+	db $00,$01,$02,$03
+	; ...
+	db $FF</code></pre>
 		<a href="#contents">Return to top</a></p>
 		<hr />
         <p id="text-output"><h3>Text Output</h3>
@@ -2488,22 +2671,6 @@ endif</code></pre>
         Example:<br/>
 		rep 5 : nop ;write nop 5 times<br/>
 		rep 2 : do_something() ; Calls do_something() macro twice
-        <br>
-            <b>incsrc:</b><br>
-            Assemble included file. There is a 512-deep recursion limit. (e.g.
-            incsrc
-            inside an incsrc inside an incsrc...) - See the macro definitions for
-            why this is here. It will assemble the included file immediately when
-            hit.
-            So if your incsrc is in the middle of the file, that's where it's
-            going.
-            All labels/sublabels/etc. are in the global-scope. So if you have
-            label1:
-            defined in file1.asm, then incsrc file2.asm, file2 will be able to use
-            label1:, and subsequently not be able to redefine it.<br>
-			incsrc, incbin and similar commands will look for the referenced files in the folder the current file is in (if you're in a macro, it's
-			relative to the macro, not the caller). By using include search paths (see section <a href="#usage">Usage</a> for details), you can influence Asar's behavior for when a file isn't found in that location.
-            <br><br>
     </body>
 </html>
 
